# RustWebServer

./: .gitignore  Cargo.toml  README.md
example/: main.rs
example/async-example/: Cargo.toml  README.md
example/async-example/src/: lib.rs  main.rs
example/async_example/: Cargo.toml  README.md
example/async_example/src/: lib.rs  main.rs
example/asyncourstructure/: README.md
example/asyncourstructure/rootcompose/: Cargo.toml
example/axum-test/: Cargo.toml  README.md
example/axum-test-assotypes/: Cargo.toml  README.md
example/axum-test-assotypes-nightly/: README.md
example/axum-test-assotypes-nightly/src/: controller.rs  (+2 more)
example/axum-test-assotypes/run_axum/: Cargo.toml
example/axum-test-assotypes/run_axum/src/: main.rs
example/axum-test-assotypes/src/: .lib.rs.swp  controller.rs  lib.rs  service.rs
example/cargo/: README.md
example/commandhandler/: Cargo.toml  README.md
example/errorhandling/: Cargo.toml  README.md
example/middleware/: Cargo.toml  README.md
example/mockreqwest/: Cargo.toml  README.md
example/queries/: README.md
example/repository/: README.md
example/sea-orm-test/: Cargo.toml  README.md
example/seaorm-test/: Cargo.toml
example/sqlx-test/: Cargo.toml  README.md  docker-compose.yaml
example/sqlx-test/scripts/: init_db.sh
example/sqlx-test/src/: main.rs
example/structure/: Cargo.toml  README.md
example/structure/binary/: Cargo.toml
example/structure/binary/src/: main.rs  test3.rs
example/structure/binary/src/test/: mod.rs
example/structure/binary/src/test2/: mod.rs  submodule1.rs
example/structure/binary/src/test2/submodule2/: mod.rs
example/tests_example/: README.md
example/tracing-test/: Cargo.toml  README.md
example/workspaces/: Cargo.toml  README.md
example/workspaces/rootcompose/: Cargo.toml
example/workspaces/rootcompose/src/: main.rs
(+70 files in other folders)
