[package]
name = "axumtest"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = {version = "0.14.25", features = ["full"]}
tower = "0.4.13"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
axum = "0.7.5"
trait-variant = "0.1.2"
