[package]
name = "binary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
library = {path = "../library"}
secondlib = {path = "../secondlib"}
# binaries are never allowed as dependencies
# binary = {path = "./binary"}
