[package]
name = "rootcompose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
repository = {path = "../repository"}
controller = {path = "../controller"}
business = {path = "../business"}
testlibrary = {path = "../testlibrary"}
# binaries are never allowed as dependencies
# binary = {path = "./binary"}
